<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.motor.param.ParamSetActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:contentScrim="@color/tittleBar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleMarginTop="15dp" />

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/rwxx_top_bg"
                app:layout_collapseMode="parallax" />
            <!--测试任务信息-->


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/task_inf_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_task_name"
            style="@style/Edittext_TaskInf"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/taskUnitName"
            android:maxLength="50" />

        <EditText
            android:id="@+id/et_number"
            style="@style/Edittext_TaskInf"
            android:layout_marginTop="15dp"
            android:hint="@string/gasPumpNumber"
            android:maxLength="20" />

        <EditText
            android:id="@+id/et_people_name"
            style="@style/Edittext_TaskInf"
            android:layout_marginTop="15dp"
            android:hint="@string/testPeople"
            android:maxLength="50" />
    </LinearLayout>


    <include layout="@layout/content_create_task" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/selector_button_test"
        app:backgroundTint="#FFfd8607"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="end|bottom"
        app:pressedTranslationZ="12dp"
        app:rippleColor="#33728dff"
        app:srcCompat="@drawable/vector_drawable_search"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/btn_go_test"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:background="@drawable/selector_button_test"
        android:gravity="center"
        android:text="@string/startTest"
        android:textColor="@color/lib_white"
        android:textSize="15sp" />

</android.support.design.widget.CoordinatorLayout>
