<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.motor.report.ReportActivity">

    <LinearLayout
        android:id="@+id/serverTopAdView"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:textColor="#0e142b"
            android:text="@string/wifi_state" />

        <TextView
            android:id="@+id/wifi_state"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5px"
            android:singleLine="true"
            android:textColor="#0e142b"
            android:text="@string/wifi_state" />

        <ImageView
            android:id="@+id/wifi_state_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/wifi_state4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instruction_pre"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/instruction_pre"
            android:textSize="20sp"
            android:textColor="#0e142b"
            android:visibility="gone" />

        <TextView
            android:id="@+id/instruction_pre_inf"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/instruction_pre_inf"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:textColor="#0e142b"
            android:visibility="gone" />

        <TextView
            android:id="@+id/instruction"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/instruction" />

        <TextView
            android:id="@+id/ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15px"
            android:background="@drawable/ipaddress_bg"
            android:gravity="center"
            android:minWidth="150px"
            android:paddingLeft="15px"
            android:paddingRight="15px"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textSize="32px"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/start_stop_button"
            android:layout_width="274px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20px"
            android:layout_marginTop="20px"
            android:background="@drawable/btn_bottom_last"
            android:gravity="center">

            <TextView
                android:id="@+id/start_stop_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10px"
                android:gravity="center"
                android:textSize="28px" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/serverBottomAdView"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        >
    </LinearLayout>

</LinearLayout>
